object: handle the case when constructing a proxy fails

If constructing the proxy object for a GObject fails (because
the code is called from with GC, perhaps), the code that unsets
unthreadsafe_template_for_constructor never ran, resulting in
a crash on the next attempt to construct a new object.

https://bugzilla.gnome.org/show_bug.cgi?id=661323
https://bugzilla.redhat.com/show_bug.cgi?id=725165